--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,6 +2,7 @@
 <html ng-app="app">
 
 <head>
+    <title>Resume for Anthony M Jones</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link data-require="bootstrap-css@*" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css"
